cli/tests/059_fs_relative_path_perm.ts.out
[WILDCARD]error: Uncaught PermissionDenied: read access to "non-existent", run again with the --allow-read flag
      (msg) => new errors.PermissionDenied(msg),
               ^
    at [WILDCARD]
